force-app/main/default/objects/Nebenkostenzuschuss__c/Nebenkostenzuschuss__c.object-meta.xml
<CustomObject>
    <label>Nebenkostenzuschuss</label>
    <nameField>
        <label>Nebenkostenzuschuss-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nebenkostenzusch&#252;sse</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>