force-app/main/default/objects/Nebenkostenzuschuss__c/fields/BelegWurdeGeneriert__c.field-meta.xml
<CustomField>
    <fullName>BelegWurdeGeneriert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beleg wurde generiert?</label>
    <type>Checkbox</type>
</CustomField>