force-app/main/default/objects/Nebenkostenzuschuss__c/fields/BetragInklUSt__c.field-meta.xml
<CustomField>
    <fullName>BetragInklUSt__c</fullName>
    <formula>Betrag__c * 1.19</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Betrag inkl. USt.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>