force-app/main/default/objects/Nebenkostenzuschuss__c/fields/DatumGenehmigungBackoffice__c.field-meta.xml
<CustomField>
    <fullName>DatumGenehmigungBackoffice__c</fullName>
    <label>Datum Genehmigung Backoffice</label>
    <type>Date</type>
</CustomField>