force-app/main/default/objects/Nebenkostenzuschuss__c/fields/DatumGenehmigungControlling__c.field-meta.xml
<CustomField>
    <fullName>DatumGenehmigungControlling__c</fullName>
    <label>Datum Genehmigung Controlling</label>
    <type>Date</type>
</CustomField>