force-app/main/default/objects/Nebenkostenzuschuss__c/fields/Empfaenger__c.field-meta.xml
<CustomField>
    <fullName>Empfaenger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empf&#228;nger</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Nebenkostenzusch&#252;sse</relationshipLabel>
    <relationshipName>Nebenkostenzuschuesse</relationshipName>
    <type>Lookup</type>
</CustomField>