force-app/main/default/objects/Nebenkostenzuschuss__c/fields/GenehmigungBackoffice__c.field-meta.xml
<CustomField>
    <fullName>GenehmigungBackoffice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Genehmigung Backoffice</label>
    <type>Checkbox</type>
</CustomField>