force-app/main/default/objects/Nebenkostenzuschuss__c/fields/GenehmigungControlling__c.field-meta.xml
<CustomField>
    <fullName>GenehmigungControlling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Genehmigung Controlling</label>
    <type>Checkbox</type>
</CustomField>