force-app/main/default/objects/Nebenkostenzuschuss__c/fields/Kunde__c.field-meta.xml
<CustomField>
    <fullName>Kunde__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kunde</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Nebenkostenzusch&#252;sse (Kunde)</relationshipLabel>
    <relationshipName>Nebenkostenzuschuesse1</relationshipName>
    <type>Lookup</type>
</CustomField>