force-app/main/default/objects/Nebenkostenzuschuss__c/fields/LaufnummerNew__c.field-meta.xml
<CustomField>
    <fullName>LaufnummerNew__c</fullName>
    <formula>'NK ' + TEXT(YEAR( DatumGenehmigungBackoffice__c )) + ' ' + LPAD(TEXT( Laufnummer_Zahl__c ), 4, '0')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Laufnummer</label>
    <type>Text</type>
</CustomField>