force-app/main/default/objects/Nebenkostenzuschuss__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verkaufschance</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Nebenkostenzusch&#252;sse</relationshipLabel>
    <relationshipName>Nebenkostenzuschuesse</relationshipName>
    <type>Lookup</type>
</CustomField>