force-app/main/default/objects/Nebenkostenzuschuss__c/fields/StornoGeklaert__c.field-meta.xml
<CustomField>
    <fullName>StornoGeklaert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Storno gekl&#228;rt</label>
    <type>Checkbox</type>
</CustomField>