force-app/main/default/objects/Nebenkostenzuschuss__c/fields/StornoLaufnummer__c.field-meta.xml
<CustomField>
    <fullName>StornoLaufnummer__c</fullName>
    <formula>'SB NK ' + TEXT(YEAR( DatumStorniert__c )) + ' ' + LPAD(TEXT( StornoLaufnummerZahl__c ), 4, '0')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Storno Laufnummer</label>
    <type>Text</type>
</CustomField>