force-app/main/default/objects/Nebenkostenzuschuss__c/fields/StornoWurdeGeneriert__c.field-meta.xml
<CustomField>
    <fullName>StornoWurdeGeneriert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Storno wurde generiert?</label>
    <type>Checkbox</type>
</CustomField>