force-app/main/default/objects/Nebenkostenzuschuss__c/fields/Teilobjekt__c.field-meta.xml
<CustomField>
    <fullName>Teilobjekt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teilobjekt</label>
    <referenceTo>Appartment__c</referenceTo>
    <relationshipLabel>Nebenkostenzusch&#252;sse</relationshipLabel>
    <relationshipName>Nebenkostenzuschuesse</relationshipName>
    <type>Lookup</type>
</CustomField>