force-app/main/default/objects/Nebenkostenzuschuss__c/fields/USt__c.field-meta.xml
<CustomField>
    <fullName>USt__c</fullName>
    <formula>Betrag__c * 0.19</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>USt.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>