force-app/main/default/objects/Nebenkostenzuschuss__c/fields/ZuDatevUebertragen__c.field-meta.xml
<CustomField>
    <fullName>ZuDatevUebertragen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zu Datev &#252;bertragen</label>
    <type>Checkbox</type>
</CustomField>