force-app/main/default/objects/Nebenkostenzuschuss__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Teilobjekt__c</columns>
    <columns>Objekt__c</columns>
    <columns>Betrag__c</columns>
    <columns>BetragInklUSt__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>